# build-scripts

./: AndroidJenkinsFile  CMakeLists.txt  JenkinsFile  JenkinsFile-anyBranch  JenkinsFile-develop  JenkinsFile-master  README.adoc  build-all.bat  build-all.sh  build.sh  buildBoost.sh  buildOpencv.sh  buildOpencvAndroid.sh  buildOpencvNonFree.sh  checkout.sh  cmake-build-SolARWrapper.sh  cmake-build-android.sh  cmake-build.sh  fromscratch-cmake.sh  fromscratch-nonfree-cmake.sh  fromscratch-nonfree.sh  fromscratch.sh  packageappbundle.pri  qtmake.sh  qtmakeAndInstall.sh  solarShell.bat  solarbuild.sh  solarshell_VS2015.bat  solarshell_VS2017.bat  updateGit.sh  versioner.sh  versions.txt
